nodejs-app/mysql-deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: nodejs-prod
  labels:
    app: mysql-db
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: mysql-db
    template:
      metadata:
        labels:
          app: mysql-db
      spec:
        containers:
        - name: mysql-db
          image: mysql
          containerPort: 3306
