nodejs-app/mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deployment
  namespace: nodejs-prod
  labels:
    app: mysql-db
spec:
  serviceName: mysql-headless
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql-db
        image: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/db
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
