nodejs-app/mysql-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: nodejs-prod
spec:
  selector:
    app: nodejs
  ports:
    port: 3306
