nodejs-app/nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: nodejs
spec:
  type: Loadbalance
  selector:
    matchLabels:
      app: nodejs
    ports:
      - protocol: TCP
        targetPort: 8888
        port: 80
