nodejs-app/nodejs-app.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: nodejs-dev

---
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: nodejs-backend-deployment
  namespace: nodejs-dev
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nodejs-app
        image: node:22-alphine
        ports:
        - containerPort: 8888
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nodejs-api-deployment
  namespace: nodejs-dev
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: Jkaninda/simple-api
        ports:
        - containerPort: 8090

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextjs-frontent-deployment
  namespace: nodejs-dev
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nextjs-app
        image: nextjs-frontend:latest
        ports: 
        - containerPort: 8888
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---
kind: Service
apiVersion: v1
metadata:
  name: nodejs-service
  namespace: nodejs-dev
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8888

---
kind: Service
apiVersion: v1
metadata:
  name: nodejs-api-service
  namespace: nodejs-dev
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
---
kind: Service
apiVersion: v1
metadata:
  name: nextjs-service
  namespace: nodejs-dev
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8888
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nodejs-ingress
  namespace: nodejs-dev
spec:
  rules:
  - host: abc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-service
            port:
              number: 3000
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port: 
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nodejs-api-service
            port:
              number: 8090
